fix(release): finalize 0.43.3 validation candidate